src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Navbar.css  */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background-color: #4f5d4f;
  border-bottom: 1px solid #ddd;
  height: 60px;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 9999;

}

.navbar img {
  height: 3.1cm;
  max-width: 207px;
  object-fit: contain;

}

.burger-menu {
  font-size: 24px;
  cursor: pointer;
  display: none;
}

.nav-links {
  display: flex;
  gap: 20px;
  margin-right: 20px;
  /* Add margin to the right */
}

.nav-links a {
  color: #ffd700;
  text-decoration: none;
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
}

.nav-links.open {
  display: block;
}

@media (max-width: 600px) {
  .burger-menu {
    display: block;
    /* Show burger menu on smaller screens */
  }

  .nav-links {
    display: flex;
    /* Set as flex so it can be toggled */
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
    position: absolute;
    top: 60px;
    right: 20px;
    background-color: #4f5d4f;
    padding: 10px;
    border-radius: 5px;
    z-index: 999;
    visibility: hidden;
    /* Instead of display: none */
    opacity: 0;
    transform: translateY(-10px);
    /* Subtle effect */
    transition: visibility 0s linear 0.2s, opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
  }

  .nav-links.open {
    visibility: visible;
    opacity: 1;
    transform: translateY(0);
    transition-delay: 0s;
  }

  .nav-links a {
    display: block;
    width: 100%;
    padding: 10px 0;
    text-align: left;

  }
}



.slider-container {
  width: 100%;
  height: auto;
  overflow: hidden;
  position: relative;
  margin: 0;
  max-width: 100%;

}

.slider {
  display: flex;
  transition: transform 0.5s ease-in-out;
  width: 100%;


}

.slider img {
  width: 100%;
  height: auto;
  /* flex: 1 0 100%; */
  flex-shrink: 0;
  /* Prevent images from shrinking */
  object-fit: cover;
}

button.prev,
button.next {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  padding: 10px;
  cursor: pointer;
  z-index: 1;
}

button.prev {
  left: 10px;
}

button.next {
  right: 10px;
}

.about-container {
  font-family: 'Poppins', sans-serif;
  padding: 20px;
  margin: 10px 10px 10px 10px;
}

.get-estimate-btn {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  background-color: white;
  color: #4f5d4f;
  border: 2px solid #4f5d4f;
  padding: 10px 20px;
  cursor: pointer;
  height: 1.5cm;
  font-size: 16px;
  border-radius: 10px;
  transition: background-color 0.3s ease;
  margin: 0px 20px 25px 20px;
}

.get-estimate-btn:hover {
  background-color: white;
}




/* Responsive styles */
@media (max-width: 600px) {
  .get-estimate-btn {
    width: 50%;
    max-width: 250px;
    padding: 15px;
    font-size: 18px;
  }
}

@media (min-width: 1024px) {

  .slider-container {
    max-height: 20%;
  }
  .slider img {
    width: 100%;
    /* max-width: 900px; */
    margin: 0 auto;
    display: block;
  }
}

@media (min-width: 1024px) {
  .about-container {
    max-width: 600px;
    text-align: left;
  }
}

